# raveling

./: .gitignore  APPROVAL_WORKFLOW.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_SUMMARY.md  WEB_DESIGNER_IMPLEMENTATION.md  main.py  pyproject.toml  run_designer.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: README.md  env.example  nixpacks.toml  pyproject.toml  railway.json  run_migrations.sh  start.sh
backend/alembic/: README  env.py
backend/alembic/versions/: 000_add_user_color_to_users.py  001_add_style_attributes_to_effect_style.py
backend/scripts/: README.md  create_admin.py
backend/src/: main.py
backend/src/api/: __init__.py  approval.py  auth.py  characters.py  collaboration.py  effect_styles.py  effectors.py  items.py  skills.py  spells.py  users.py  weapons.py
backend/src/core/: config.py  github_storage.py  security.py
backend/src/database/: database.py  init_data.py  init_db.py  models.py
backend/src/schemas/: auth.py  config.py
backend/src/utils/: weapon_analysis.py
backend/src/utils/common/: __init__.py  distributions.py
docs/notes/: notes.txt  weapons and effects.txt
frontend/: README.md  env.example  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
frontend/src/: App.tsx  index.css
frontend/src/constants/: colors.css  colors.ts
frontend/src/hooks/: useAuth.tsx  useUserColor.ts
frontend/src/pages/: AboutPage.tsx  GameplayPage.tsx  HomePage.tsx
frontend/src/utils/: __init__.ts  (+3 more)
src/analysis/: __init__.py  weapon_analysis.py
src/data/: races.yaml
src/models/: __init__.py
src/ui/: __init__.py  designer_app.py  distribution_parameter_widget.py  functional_node_editor.py  item_designer.py  main_window.py  skill_designer.py
src/utils/: __init__.py  constants.py
(+102 files in other folders)
