[project]
name = "raveling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyside6>=6.10.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "scipy>=1.16.3",
    "pydantic[email]>=2.12.5",
]
