[project]
name = "raveling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyside6>=6.10.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "scipy>=1.16.3",
    "pydantic[email]>=2.12.5",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pygithub>=2.1.1",
    "email-validator>=2.3.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
]
